--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@vercel/node": "^4.0.0",
     "express": "^4.21.2"
   },
   "devDependencies": {
