--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
-  "builds": [{ "src": "server.ts", "use": "@vercel/node" }],
-  "routes": [{ "src": "/webhook", "dest": "server.ts" }]
+  "builds": [{ "src": "api/server.ts", "use": "@vercel/node" }],
+  "routes": [{ "src": "/webhook", "dest": "api/server.ts" }]
 }
