--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,10 @@
     "target": "ES6",
     "module": "CommonJS",
     "outDir": "dist",
-    "rootDir": "src",
-    "strict": true,
-    "esModuleInterop": true
-  }
+    "esModuleInterop": true,
+    "rootDir": ".",
+    "strict": true
+  },
+  "include": ["api/**/*"],
+  "exclude": ["node_modules"]
 }
